Added functionality to delete and display on webpage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
       <h1 class="text-center"> Write it all down. </h1>
       <div class="text-center"> 
-          <input placeholder="Search your notes" type="text" name="fname"><br>
+          <input placeholder="Search your notes" type="text" name="search">
+          <button id="searchBtn">Enter</button><br>
       </div>
     </div class="container-fluid">
 
@@ -35,8 +36,8 @@
                     <label for="title"> Title </label><br>
                     <input id="title" type="text" name="title"><br>
                     <label for="content"> Content </label> <br>
-                    <textarea rows="5" cols="50" id="content" type="text" name="content"></textarea><br>
-                    <button id="addBtn">Add</button>
+                    <textarea rows="5" cols="50" id="content" type="text" name="content"></textarea>
+                <button id="addBtn">Add</button>
             </div>
             </div>
         </div> 
